--- a/styles.css
+++ b/styles.css
@@ -1,69 +1,80 @@
 body {
-    background-color: #2A1E22;
+    background-color: #404040;
 }
 
-h1 {
-    text-align: right;
-    padding-right: 20px;
-    padding-top: 10px;
-    font-size: 50px;
-    font-family: 'Orbitron', sans-serif;
-    font-weight: 2;
-}
-
-.calculator {
+.calc-case {
     background-color: blue;
-    width: 440px;
-    height: 570px;
-    padding-top: 50px;
-    margin: auto;
-    border-radius: 10px;
+    width: 350px;
+    height: 550px;
     border: solid 2px black;
-    margin-top: 50px;
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: auto;
 }
 
 .display {
-    background-color: lightgrey;
-    height: 100px;
+    background-color: #b7afa8;
+    width: 80%;
+    height: 15%;
+    border: solid 2px black;
+    border-radius: 10px;
+    margin: 40px auto;
+}
+
+.displayNum {
+    font-size: 70px;
+    font-family: 'Calculator', sans-serif;
+    text-align: right;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.button-area {
+    width: 80%;
     margin: auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5px;
+}
+
+.number, 
+.operator{
+    background-color: lightgray;
+    width: 65px;
+    height: 65px;
     border-radius: 10px;
     border: solid 2px black;
-    margin-bottom: 20px;
+    margin: 0;
+    padding: 0;
 }
 
-.container {
-    margin: auto;
-    width: 372px;
+.number:hover, 
+.operator:hover{
+    background-color: rgba(170,170,170);
 }
 
-.top-row {
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: space-between;
+.number:active, 
+.operator:active{
+    background-color: rgba(140,140,140);
 }
 
-.number {
-    width: 90px;
-    height: 75px;
-    border-radius: 5px;
-    border: solid 2px black;
-    margin-bottom: 10px;
-}
-
-.operator {
-    width: 90px;
-    height: 75px;
-    border-radius: 5px;
-    border: solid 2px black;
-    margin-bottom: 10px;
-}
 
 .clear {
-    width: 183px;
-    height: 70px;
-    border-radius: 5px;
-    border: solid 2px black;
     background-color: rgba(255, 0, 0);
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    border: solid 2px black;
+    margin: 0;
+    padding: 0;
+    grid-column: 1/3;
 }
 
 .clear:hover {
@@ -75,29 +86,20 @@ h1 {
 }
 
 .delete {
-    width: 183px;
-    height: 70px;
-    border-radius: 5px;
-    border: solid 2px black;
     background-color:rgb(255, 165, 0);
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    border: solid 2px black;
+    margin: 0;
+    padding: 0;
+    grid-column: 3/5;
 }
 
-.delete:hover {
+.delete:hover{
     background-color:rgb(230, 145, 0);
 }
 
 .delete:active {
     background-color:rgb(200, 115, 0);
-}
-
-.period {
-    width: 90px;
-    height: 75px;
-    border-radius: 5px;
-    border: solid 2px black;
-    margin-bottom: 10px;
-}
-
-.other-buttons {
-    display: inline-block;
 }
