--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
-    background-color: #404040;
+    background-color: black;
 }
 
 .calc-case {
-    background-color: blue;
+    background-color: black;
     width: 350px;
     height: 550px;
-    border: solid 2px black;
-    border-radius: 10px;
+    border: solid 1px white;
+    border-radius: 15px;
     position: absolute;
     left: 0;
     right: 0;
@@ -20,86 +20,69 @@ body {
 }
 
 .display {
-    background-color: #b7afa8;
     width: 80%;
     height: 15%;
-    border: solid 2px black;
-    border-radius: 10px;
+    background-color: black;
+    border: solid 1px white;
+    color: white;
+    border-radius: 15px;
     margin: 40px auto;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    font-family: 'Calculator', sans-serif;
 }
 
-.displayNum {
-    font-size: 70px;
-    font-family: 'Calculator', sans-serif;
+.previousDisplay {
     text-align: right;
-    margin-top: 10px;
+    font-size: 20px;
     margin-right: 10px;
-}
+    margin-top: 10px;
+} 
+
+
+.currentDisplay {
+    font-size: 60px;
+    text-align: right;
+    margin-top: -10px;
+    margin-right: 10px;
+} 
 
 .button-area {
     width: 80%;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 5px;
+    grid-template-rows: repeat(5, 65px);
+    gap: 6px;
 }
 
-.number, 
-.operator{
-    background-color: lightgray;
-    width: 65px;
-    height: 65px;
-    border-radius: 10px;
-    border: solid 2px black;
+.button-area > button {
+    cursor: pointer;
+    font-size: 18px;
+    background-color: black;
+    border: solid 1px white;
+    color: white;
+    border-radius: 15px;
     margin: 0;
     padding: 0;
 }
 
-.number:hover, 
-.operator:hover{
-    background-color: rgba(170,170,170);
+.button-area > button:hover {
+    background-color: white;
+    border: solid 1px black;
+    color: black;
 }
 
-.number:active, 
-.operator:active{
-    background-color: rgba(140,140,140);
+.button-area > button:active {
+    background-color: rgba(210, 210, 210);
 }
-
 
 .clear {
-    background-color: rgba(255, 0, 0);
-    width: 100%;
-    height: 50px;
-    border-radius: 10px;
-    border: solid 2px black;
-    margin: 0;
-    padding: 0;
-    grid-column: 1/3;
-}
+    grid-column: span 2;
+} 
 
-.clear:hover {
-    background-color: rgba(230, 0, 0);
-}
-
-.clear:active {
-    background-color: rgba(200, 0, 0);
-}
-
-.delete {
-    background-color:rgb(255, 165, 0);
-    width: 100%;
-    height: 50px;
-    border-radius: 10px;
-    border: solid 2px black;
-    margin: 0;
-    padding: 0;
-    grid-column: 3/5;
-}
-
-.delete:hover{
-    background-color:rgb(230, 145, 0);
-}
-
-.delete:active {
-    background-color:rgb(200, 115, 0);
+.add {
+    grid-row: span 2;
 }
